--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 node_js:
-  - "0.12"
+  - "4.4.3"
 sudo: false
 before_install: npm install -g gulp
 install: npm install
 before_script: gulp build
 notifications:
   webhooks:
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
+    on_success: change  # options: change
+    on_failure: always  # options: always
     on_start: false     # default: false
