--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "ng-file-upload": "12.0.4",
     "ngInfiniteScroll": "1.2.2",
     "swagger-ui": "2.1.4",
-    "jquery-waypoints": "4.0.0"
+    "jquery-waypoints": "4.0.0",
+    "angular-google-maps": "2.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.2"
